Changes for 4.2.0rc2

New features:
..F....... [ZBXNEXT-5114] improved multiline input control (ashubin)
...G...... [ZBXNEXT-5123] added server address and port to the Zabbix sender output (wiper)

Bug fixes:
........S. [ZBX-15840] fixed the type of pre-installed first email media as "text/plain" (MVekslers)
..F....... [ZBX-15351] fixed PHP error in "Problems by severity" if no problems (vasilijs)
.........T [ZBX-8907] fixed weird description for queue trigger in templates (akozlovs)

--------------------------------------------------------------------------------
Changes for 4.2.0rc1

New features:
..F....... [ZBXNEXT-5105] added context menu for trigger name in event details page (agriscenko)
A.F.....S. [ZBXNEXT-5011,ZBXNEXT-5012] implemented testing option for item preprocessing steps (miks, wiper)
A.F....PS. [ZBXNEXT-4865,ZBXNEXT-4961] added preprocessing steps to work with Prometheus agents (Ivo, wiper)
A.F....... [ZBXNEXT-155] added support of multiple macros in map element label, url name and url value (miks)
A.F....PS. [ZBXNEXT-5083,ZBXNEXT-4861] added support of LLD rule as dependent item (agriscenko, gcalenko, Sasha, vso)
.......PS. [ZBXNEXT-5081] added item preprocessing support to proxies (wiper)
...G...... [ZBXNEXT-4967] added Zabbix sender data sending to multiple destinations given in ServerActive configuration parameter (viktors)
A.F....... [ZBX-15286] dropped support use of discovered items as master (Sasha)

Bug fixes:
...G...PS. [ZBX-15552] fixed compilation with LibreSSL as OpenSSL replacement and OpenSSL without PSK support (Andris)
..F....... [ZBX-10317] made info column on item list page always visible (agriscenko)
..F....... [ZBX-15322] fixed graph area near grid line with 0 value (ashubin)
..F....... [ZBX-15207] fixed deprecated css features (ashubin)
.......PS. [ZBX-15798] fixed proxy configuration update failure on Oracle; fixed failure on empty SQL buffer on Oracle (kalimulin)